--- a/git-ops/apps/apps-bootstrap.yaml
+++ b/git-ops/apps/apps-bootstrap.yaml
@@ -9,9 +9,9 @@ spec:
     namespace: argocd
   project: default
   source:
-    repoURL: https://github.com/Piercuta/eks-git-ops.git
+    repoURL: https://github.com/Piercuta/eks-auto-cdk-gitops.git
     targetRevision: main
-    path: apps
+    path: git-ops/apps
     directory:
       recurse: true
   syncPolicy:
