--- a/git-ops/services/fastapi/02-serviceaccount.yaml
+++ b/git-ops/services/fastapi/02-serviceaccount.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: fastapi
   labels:
     app: fastapi
-    project: ${PROJECT_NAME}
-    env: ${ENVIRONMENT}
-  annotations:
-    eks.amazonaws.com/role-arn: ${SERVICE_ACCOUNT_ROLE_ARN} # <-- ARN du rôle IAM lié (facultatif si tu fais de l'IRSA)
+    project: piercuta
+    env: dev
+  #annotations:
+    # eks.amazonaws.com/role-arn: ${SERVICE_ACCOUNT_ROLE_ARN} # <-- ARN du rôle IAM lié (facultatif si tu fais de l'IRSA)
