--- a/git-ops/services/fastapi/03-deployment.yaml
+++ b/git-ops/services/fastapi/03-deployment.yaml
@@ -5,10 +5,10 @@ metadata:
   namespace: fastapi
   labels:
     app: fastapi
-    project: ${PROJECT_NAME}
-    env: ${ENVIRONMENT}
+    project: piercuta
+    env: dev
 spec:
-  replicas: ${ASG_DESIRED_CAPACITY}
+  replicas: 2
   selector:
     matchLabels:
       app: fastapi
@@ -16,8 +16,8 @@ spec:
     metadata:
       labels:
         app: fastapi
-        project: ${PROJECT_NAME}
-        env: ${ENVIRONMENT}
+        project: piercuta
+        env: dev
         piercuta.com/node-type: fastapi
     spec:
       nodeSelector:
@@ -25,38 +25,38 @@ spec:
       serviceAccountName: fastapi-sa
       containers:
       - name: fastapi
-        image: ${FASTAPI_IMAGE}
+        image: "532673134317.dkr.ecr.eu-west-1.amazonaws.com/services/ecs/fastapi_app:dev"
         env:
         - name: ENV_NAME
-          value: "${ENV_NAME}"
+          value: "dev"
         - name: PROJECT_NAME
-          value: "${PROJECT_NAME}"
+          value: "piercuta"
         - name: POSTGRES_SERVER
-          value: "${POSTGRES_SERVER}"
+          value: "piercuta-dev-aurora-cluster.cluster-c36i2qm0y4yz.eu-west-1.rds.amazonaws.com"
         - name: POSTGRES_USER
-          value: "${POSTGRES_USER}"
+          value: "postgres"
         - name: FRONTEND_HOST
-          value: "${FRONTEND_HOST}"
+          value: "https://my-frontend.piercuta.com"
         - name: AWS_REGION
-          value: "${AWS_REGION}"
+          value: "eu-west-1"
         - name: AWS_SECRET_ARN
-          value: "${AWS_SECRET_ARN}"
+          value: "arn:aws:secretsmanager:eu-west-1:532673134317:secret:rds!cluster-bf1b0f60-73b1-43aa-ae9c-2350398361c1-8FSnWF"
         - name: POSTGRES_DB
-          value: "${POSTGRES_DB}"
+          value: "app"
         - name: POSTGRES_PORT
-          value: "${POSTGRES_PORT}"
+          value: "5432"
         - name: SECRET_KEY
-          value: "${SECRET_KEY}"
+          value: "Osa3ZuhC7d6ssbF4XmKtYlemuTdbefkPvuZgOCRTrLg"
         - name: FIRST_SUPERUSER
-          value: "${FIRST_SUPERUSER}"
+          value: "admin@example.com"
         - name: FIRST_SUPERUSER_PASSWORD
-          value: "${FIRST_SUPERUSER_PASSWORD}"
+          value: "Coucou123!"
         ports:
         - containerPort: 8000
         resources:
           requests:
-            cpu: ${CPU_CAPACITY}
-            memory: ${MEM_CAPACITY}
+            cpu: 1Gi
+            memory: 1Gi
           limits:
-            cpu: ${CPU_CAPACITY}
-            memory: ${MEM_CAPACITY}
+            cpu: 1Gi
+            memory: 1Gi
