--- a/git-ops/services/fastapi/04-service.yaml
+++ b/git-ops/services/fastapi/04-service.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: fastapi
   labels:
     app: fastapi
-    project: ${PROJECT_NAME}
-    env: ${ENVIRONMENT}
+    project: piercuta
+    env: dev
 spec:
   type: ClusterIP
   selector:
