--- a/git-ops/services/fastapi/05-hpa.yaml
+++ b/git-ops/services/fastapi/05-hpa.yaml
@@ -5,15 +5,15 @@ metadata:
   namespace: fastapi
   labels:
     app: fastapi
-    project: ${PROJECT_NAME}
-    env: ${ENVIRONMENT}
+    project: piercuta
+    env: dev
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
     name: fastapi-app
-  minReplicas: ${ASG_MIN_CAPACITY}
-  maxReplicas: ${ASG_MAX_CAPACITY}
+  minReplicas: 1
+  maxReplicas: 5
   metrics:
   - type: Resource
     resource:
